test/Fail/customised/Issue2649-1.agda
module Issue2649-1 where

module MyModule (A : Set) (a : A) where

  foo : A
  foo = a
